<resources>
    <string name="app_name">FoodPlanner</string>
    <string name="title_activity_recipe_creator">Recipe Creator</string>
    <string name="title_activity_recipe_vewier">Your Recipe</string>

    <!--App features-->
    <string name="feature_cookbook">Cookbook</string>
    <string name="feature_shopping_list">Shopping List</string>
    <string name="feature_meals">Meals</string>

    <string name="img_desc_add">Add Entry</string>

    <!--Edit Text Hints-->
    <string name="hint_name">Name</string>
    <string name="hint_shopping_list_item_name">Item Name</string>
    <string name="hint_recipe_name">Recipe Name</string>
    <string name="hint_recipe_ingredient_item_name">Ingredient Name</string>

    <!--Button Titles-->
    <string name="button_cancel">Cancel</string>
    <string name="button_create">Create</string>
    <string name="button_add">Add</string>
    <string name="button_update">Update</string>
    <string name="button_clear_all_selected">Clear All</string>

    <!--Dialog Titles-->
    <string name="title_dialog_create_recipe">New Recipe</string>
    <string name="title_dialog_add_meal">New Meal</string>
    <string name="title_dialog_update_meal">Edit</string>

    <!--Screen/Frame Titles-->
    <string name="title_display_ingredient">Ingredients</string>

    <!--Text Views-->
    <string name="text_date">Date</string>
    <string name="text_meal_type">Meal Type</string>

    <!--Menu Related Items-->
    <string name="menu_new_meal">New Meal</string>
    <string name="menu_auto_populate_shopping_list">Create Shopping List</string>
    <string name="action_edit">Edit</string>
    <string name="action_view">View</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>
    <string name="action_update">Update</string>
    <string name="action_plan">Plan</string>
    <string name="title_meal_plan_context_menu">Select The Action</string>
    <string name="title_recipe_context_menu">Select The Action</string>

    <!--Error messages-->
    <string name="error_required">Required Field</string>
    <string name="error_already_exists">Already Exists</string>

    <!--CUSTOM VALUES-->
    <!--MEAL TYPES-->
    <array name="meal_types">
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Elevenses</item>
        <item>Lunch</item>
        <item>Tea</item>
        <item>Supper</item>
        <item>Dinner</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_action">More Action</string>
    <string name="img_desc_cooking_time">Cooking Time</string>
    <string name="img_desc_portion_size">Portion Size</string>
    <string name="recipe_portion_size">1 person</string>
    <string name="recipe_cooking_time">15 mins</string>
    <string name="title_recipe_creation_ingredients">We need...</string>
    <string name="title_recipe_creation_steps">We do...</string>
    <string name="bullet">•</string>
    <string name="text_minutes">Minutes</string>
    <string name="text_okay">Okay</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_people">people</string>


</resources>
