<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.cookbook.AddIngredientFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_add_ingredients_title"
        android:text="@string/title_display_ingredient"
        style="?android:textAppearanceMedium"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_add_ingredients_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_content_to_content"
        android:id="@+id/layout_ingredient_list_input">

        <EditText
            android:id="@+id/text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_add"
            android:hint="@string/hint_recipe_ingredient_item_name"
            android:inputType="textCapWords"
            android:imeOptions="actionDone"
            android:imeActionLabel="@string/action_add"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_input_add"
            android:layout_alignParentEnd="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/btn_add"
            android:contentDescription="@string/img_desc_add" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/background_dark"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/content"
        app:layout_constraintTop_toBottomOf="@+id/layout_ingredient_list_input"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/layout_list_item_ingredient"/>

</android.support.constraint.ConstraintLayout>